# lab04

./: LICENSE  README.md  hello_world.cpp
.github/: building.yml
.github/workflows/: building.yml
examples/: example2.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
